--- a/openapi/components/schemas/v1/order.yaml
+++ b/openapi/components/schemas/v1/order.yaml
@@ -3,4 +3,24 @@ properties:
   id:
     type: string
     format: uuid
-    description: 'The ID of the order'
+    description: 'The unique identifier of the order'
+  customer:
+    $ref: order_customer.yaml 
+  orderStatus:
+    type: string
+    description: 'The status of the order'
+  shipmentInfo:
+    type: string
+  orderLines:
+    type: array
+    items:
+      $ref: order_line.yaml 
+    description: 'The order lines of the order'
+  dateCreated:
+    type: string
+    format: date-time
+    description: 'The date and time the order was created'
+  dateUpdated:
+    type: string
+    format: date-time
+    description: 'The date and time the order was last updated'
