adding constraints to customer

--- a/openapi/components/schemas/v1/customer.yaml
+++ b/openapi/components/schemas/v1/customer.yaml
@@ -12,8 +12,12 @@ properties:
       $ref: address.yaml
     email:
       type: string
+      minLength: 3      
+      maxLength: 255
     phone:
       type: string
+      minLength: 10      
+      maxLength: 15
     paymentMethods:
       type: array
       items: 
