--- a/openapi/components/schemas/v1/address.yaml
+++ b/openapi/components/schemas/v1/address.yaml
@@ -6,16 +6,26 @@ properties:
     description: "Unique identifier representing a specific customer"
   addressLine1: 
     type: string
-    description: Address Line 1
+    description: Address Line 1    
+    minLength: 3
+    maxLength: 100
   addressLine2: 
     type: string
-    description: Address Line 2
+    description: Address Line 2    
+    minLength: 3
+    maxLength: 100
   city:
     type: string
     description: City
+    minLength: 2
+    maxLength: 100
   state:
     type: string
-    description: State
+    description: 2 character state abbreviation
+    minLength: 2
+    maxLength: 2
   zip: 
     type: string
-    description: Zip Code     
+    description: Zip Code
+    minLength: 5
+    maxLength: 10    
