Adding required properties to customer

--- a/openapi/components/schemas/v1/customer.yaml
+++ b/openapi/components/schemas/v1/customer.yaml
@@ -21,4 +21,8 @@ properties:
     paymentMethods:
       type: array
       items: 
-        $ref: payment_method.yaml     
+        $ref: payment_method.yaml
+required: 
+  - name
+  - shipToAddress
+  - billToAddress     
