--- a/openapi/components/schemas/v1/payment_method.yaml
+++ b/openapi/components/schemas/v1/payment_method.yaml
@@ -8,14 +8,19 @@ properties:
     type: string
     minLength: 2
     maxLength: 100
+    example: 'My Visa Card'
   cardNumber:
     type: integer
+    example: 1234567890123456
   expiryMonth:
     type: integer
+    example: 7
   expiryYear:
     type: integer
+    example: 2027
   cvv:
     type: integer
+    example: 123
   dateCreated:
     type: string
     format: date-time
