--- a/openapi/components/schemas/v1/product.yaml
+++ b/openapi/components/schemas/v1/product.yaml
@@ -6,7 +6,8 @@ properties:
     description: The unique identifier of the product
   description:
     type: string
-    description: The description of the product 
+    description: The description of the product
+    readOnly: true
   dimensions:
     $ref: dimensions.yaml
   categories:
@@ -27,7 +28,14 @@ properties:
     type: string
     format: date-time
     description: The date the image was created
+    readOnly: true
   dateUpdated:
     type: string
     format: date-time
-    description: The date the image was updated     
+    description: The date the image was updated
+    readOnly: true
+required: 
+  - description
+  - categories
+  - price
+  - cost         
