--- a/openapi/components/schemas/v1/dimensions.yaml
+++ b/openapi/components/schemas/v1/dimensions.yaml
@@ -2,13 +2,24 @@ type: object
 properties:
   length:
     type: number
-    description: "The length of the product"
+    description: 'The length of the product'
+    minimum: 1
+    maximum: 999
+    example: 10
   width:
     type: number
-    description: "The width of the product"
+    description: 'The width of the product'
+    minimum: 1
+    maximum: 999
+    example: 10
   height:
     type: number
-    description: "The height of the product"
-  description:
-    type: string
-    description: "The dimensions of the product"
+    description: 'The height of the product'
+    minimum: 1
+    maximum: 999
+    example: 10
+description: 'The dimensions of the product'
+required:
+  - length
+  - width
+  - height
