--- a/openapi/components/schemas/v1/order.yaml
+++ b/openapi/components/schemas/v1/order.yaml
@@ -22,15 +22,9 @@ properties:
       $ref: order_line.yaml 
     description: 'The order lines of the order'
   dateCreated:
-    type: string
-    format: date-time
-    description: 'The date and time the order was created'
-    readOnly: true
+    $ref: ../common/iso_timestamp.yaml
   dateUpdated:
-    type: string
-    format: date-time
-    description: 'The date and time the order was last updated'
-    readOnly: true
+    $ref: ../common/iso_timestamp.yaml
 required:
   - customer
   - orderStatus
