--- a/openapi/components/schemas/v1/order_line.yaml
+++ b/openapi/components/schemas/v1/order_line.yaml
@@ -14,15 +14,9 @@ properties:
     type: integer
     description: The quantity of the product shipped  
   dateCreated:
-    type: string
-    format: date-time
-    description: The date the order line was created
-    readOnly: true
+    $ref: ../common/iso_timestamp.yaml
   dateUpdated:
-    type: string
-    format: date-time
-    description: The date the order line was updated
-    readOnly: true
+    $ref: ../common/iso_timestamp.yaml
 required:
   - product
   - order_quantity
