Revert to OpenAPI 3.0.3

--- a/openapi/components/schemas/v1/customer.yaml
+++ b/openapi/components/schemas/v1/customer.yaml
@@ -12,14 +12,14 @@ properties:
     billToAddress:
       $ref: address.yaml
     email:
-      type: [string, 'null']
+      type: string
+      nullable: true
       minLength: 3      
       maxLength: 255
       example: 'john@springframework.guru'
     phone:
-      type:
-        - string
-        - 'null'
+      type: string
+      nullable: true
       minLength: 10      
       maxLength: 15
       example: '(800) 555-1212'
