--- a/openapi/components/schemas/v1/image.yaml
+++ b/openapi/components/schemas/v1/image.yaml
@@ -13,7 +13,8 @@ properties:
     maxLength: 500
     example: 'https://springframework.guru/wp-content/uploads/2019/08/spring-framework-guru-logo.png'    
   altText:
-      type: [string, 'null']
+      type: string
+      nullable: true
       minLength: 3      
       maxLength: 255
   dateCreated:
