--- a/openapi/components/schemas/v1/address.yaml
+++ b/openapi/components/schemas/v1/address.yaml
@@ -12,9 +12,8 @@ properties:
     maxLength: 100
     example: '123 Main St.'
   addressLine2: 
-    type:
-      - string
-      - 'null'
+    type: string
+    nullable: true
     description: Address Line 2    
     minLength: 3
     maxLength: 100
