--- a/openapi/components/schemas/v1/name.yaml
+++ b/openapi/components/schemas/v1/name.yaml
@@ -1,9 +1,8 @@
 type: object
 properties: 
   prefix:
-    type: 
-      - string
-      - 'null'
+    type: string
+    nullable: true
     description: "Name Prefix"
     minLength: 0
     maxLength: 25
@@ -21,9 +20,8 @@ properties:
     maxLength: 100
     example: 'Thompson'
   suffix:
-    type: 
-      - string
-      - 'null'
+    type: string
+    nullable: true
     description: "Name Suffix"
     minLength: 0
     maxLength: 25
