Refactor order_customer email to be nullable

--- a/openapi/components/schemas/v1/order_customer.yaml
+++ b/openapi/components/schemas/v1/order_customer.yaml
@@ -12,6 +12,7 @@ properties:
       $ref: address.yaml
     email:
       type: string
+      nullable: true
     phone:
       type: string
     selectedPaymentMethod:
